# iasc-lista-alumnos-practica-haskell

./: Channel.hs  Client.hs  Main.hs  Post.hs  README.md  Server.hs  Types.hs  lista_alumnos.cabal
