name:                listaAlumnos
version:             0.1.1.0
homepage:
license:             BSD3
license-file:        LICENSE
author:              Ernesto Bossi
maintainer:          bossi.ernestog@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable chat-server
  main-is:          Main.hs

  other-modules:    Client
                  , Server
                  , Types

  other-extensions: LambdaCase
                  , RecordWildCards
                  , TupleSections

  build-depends:    async      >=2.0 && <3.0
                  , base       >=4.0 && <5.0
                  , containers >=0.5 && <0.6
                  , network    >=2.0 && <3.0
                  , stm        >=2.0 && <3.0

  default-language: Haskell2010
